--- a/docs/layouts/partials/scripts.html
+++ b/docs/layouts/partials/scripts.html
@@ -11,6 +11,7 @@
 {{- if eq .Params.dayjs true -}}
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/customParseFormat.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/en.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/es.js"></script>
 {{- end }}
 
