--- a/scss/mixins/_banner.scss
+++ b/scss/mixins/_banner.scss
@@ -1,6 +1,6 @@
 @mixin bsBanner($file) {
   /*!
-   * CoreUI PRO #{$file} v5.0.0-alpha.3 (https://coreui.io)
+   * CoreUI PRO #{$file} v5.0.0-beta.0 (https://coreui.io)
    * Copyright (c) 2023 creativeLabs Łukasz Holeczek
    * License (https://coreui.io/pro/license/)
    */
