--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -462,7 +462,7 @@ $prefix:                      $variable-prefix !default;
 
 // Set mobile breakpoint
 
-$mobile-breakpoint:           md !default;
+$mobile-breakpoint:           lg !default;
 
 // Gradient
 //
@@ -2090,10 +2090,10 @@ $sidebar-nav-link-border-color:               transparent !default;
 $sidebar-nav-link-border-radius:              var(--#{$prefix}border-radius) !default;
 $sidebar-nav-link-transition:                 background .15s ease, color .15s ease, gap .15s ease !default;
 
-$sidebar-compact-nav-link-padding-y:          .75rem !default;
+$sidebar-compact-nav-link-padding-y:          .5625rem  !default;
 
 $sidebar-narrow-nav-link-padding-y:           .75rem !default;
-$sidebar-narrow-nav-link-padding-x:           .5625rem !default;
+$sidebar-narrow-nav-link-padding-x:           .5rem !default;
 
 $sidebar-nav-link-icon-margin:                .75rem !default;
 $sidebar-nav-link-icon-color:                 var(--#{$prefix}tertiary-color) !default;
