--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -449,6 +449,7 @@ $enable-validation-icons:     true !default;
 $enable-negative-margins:     false !default;
 $enable-deprecation-messages: true !default;
 $enable-important-utilities:  true !default;
+$enable-elevations:           false !default;
 $enable-ltr:                  true !default;
 $enable-rtl:                  false !default;
 
