--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -39,6 +39,7 @@
 // Skins
 @import "mixins/border-radius";
 @import "mixins/box-shadow";
+@import "mixins/elevation";
 @import "mixins/gradients";
 @import "mixins/transition";
 
