--- a/scss/mixins/_utilities.scss
+++ b/scss/mixins/_utilities.scss
@@ -93,7 +93,7 @@
                 }
               }
               @if $is-rtl == true {
-                @if (type-of($value) == 'map') {
+                @if (type-of($value) == "map") {
                   @include ltr-rtl($property, map-get($value, "ltr"), null, map-get($value, "rtl"), if($enable-important-utilities, !important, null));
                 } @else {
                   @include ltr-rtl($property, $value, null, null, if($enable-important-utilities, !important, null));
