--- a/docs/layouts/partials/head.html
+++ b/docs/layouts/partials/head.html
@@ -13,7 +13,7 @@
 <title>{{ .Title | markdownify  }} · {{ .Site.Title | markdownify }}</title>
 {{ end }}
 
-<link rel="canonical" href="{{ .Permalink }}">
+<link rel="canonical" href="{{ replace .Permalink "4.x/" "" }}">
 
 {{- if eq .Page.Layout "docs" -}}
 <link rel="preconnect" href="https://AK7KMZKZHQ-dsn.algolia.net" crossorigin>
