--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -48,11 +48,12 @@
 @import "calendar";
 @import "callout";
 @import "date-picker";
-@import "time-picker";
 @import "footer";
 @import "header";
 @import "icon";
+@import "rating";
 @import "sidebar";
+@import "time-picker";
 
 // Helpers
 @import "helpers";
