feat(Rating): add new component

--- a/scss/themes/bootstrap/bootstrap.scss
+++ b/scss/themes/bootstrap/bootstrap.scss
@@ -20,6 +20,7 @@
 @import "../../header";
 @import "../../icon";
 @import "../../loading-button";
+@import "../../rating";
 @import "../../sidebar";
 @import "../../time-picker";
 @import "../../forms/form-multi-select";
