--- a/docs/layouts/partials/head.html
+++ b/docs/layouts/partials/head.html
@@ -31,6 +31,4 @@
 {{ partial "social" . }}
 {{ partial "analytics" . }}
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@coreui/icons@2.0.0-rc.0/css/free.min.css" integrity="sha256-vejWHgYduBq3SYXJHSWSRJp7ktQpZ6d+8HGFtb9Fz9k=" crossorigin="anonymous">
-
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@coreui/icons@3.0.1/css/flag.min.css" integrity="sha256-Khtd1l8vTT/RIQluRIxdNzqOpWUePUJm+Yp2msTUazU=" crossorigin="anonymous">
